Closed
Bug 788356
Opened 13 years ago
Closed 13 years ago
Valgrind detects leak at calloc, NewContext, Evaluate (8 bytes in 1 blocks are definitely lost)
Categories
(Core :: JavaScript Engine, defect)
Tracking
()
RESOLVED
FIXED
mozilla18
People
(Reporter: gkw, Assigned: jorendorff)
References
Details
(Keywords: regression, testcase, valgrind)
Attachments
(2 files)
|
1.93 KB,
text/plain
|
Details | |
|
711 bytes,
patch
|
Waldo
:
review+
|
Details | Diff | Splinter Review |
evaluate("",{newContext:true})
shows a Valgrind leak on js opt shell on m-c changeset 7c75cd38626a without any CLI arguments at calloc
autoBisect shows this is probably related to the following changeset:
The first bad revision is:
changeset: 94274:648093316d93
user: Jason Orendorff
date: Thu May 17 18:54:30 2012 -0500
summary: Bug 755808 - Add more options to JS shell evaluate() function. r=jimb.
| Assignee | ||
Updated•13 years ago
|
Assignee: general → jorendorff
| Assignee | ||
Comment 1•13 years ago
|
||
Attachment #658721 -
Flags: review?(jwalden+bmo)
| Assignee | ||
Comment 2•13 years ago
|
||
I meant to add: Thanks, Gary. Does this fix it?
| Reporter | ||
Comment 3•13 years ago
|
||
(In reply to Jason Orendorff [:jorendorff] from comment #2)
> I meant to add: Thanks, Gary. Does this fix it?
Yes, it does, thanks for the quick patch!
| Assignee | ||
Updated•13 years ago
|
Severity: critical → normal
Updated•13 years ago
|
Attachment #658721 -
Flags: review?(jwalden+bmo) → review+
| Assignee | ||
Comment 4•13 years ago
|
||
Comment 5•13 years ago
|
||
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla18
You need to log in
before you can comment on or make changes to this bug.
Description
•