Bug 788356 - Fix memory leak in evaluate(). JS shell only; this code is not part of the browser. r=Waldo.